produtos controller e manipulação de imagens

--- a/MinhaAPICompleta/DevIO.Api/DevIO.Api.csproj
+++ b/MinhaAPICompleta/DevIO.Api/DevIO.Api.csproj
@@ -20,4 +20,8 @@
       <ProjectReference Include="..\src\DevIO.Data\DevIO.Data.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="wwwroot\imagens" />
+    </ItemGroup>
+
 </Project>
