--- a/MinhaAPICompleta/DevIO.Api/appsettings.json
+++ b/MinhaAPICompleta/DevIO.Api/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MinhaApiCompleta;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "AppSettings": {
+    "Secret": "D0A4D62B-4715-4BE9-ACD6-312D6854E88E",
+    "ExpiracaoHoras": 2,
+    "Emissor": "MeuSistema",
+    "ValidoEm": "https://localhost"
   }
 }
